# goalposts

./: .gitattributes  .gitignore  CMakeLists.txt  readme.md
images/markups/: 0001_points.txt  0002_points.txt  0003_points.txt  0004_points.txt  0005_points.txt  0006_points.txt  0007_points.txt  0008_points.txt  0009_points.txt  0010_points.txt  0011_points.txt  0012_points.txt  0013_points.txt  0014_points.txt  0015_points.txt  0016_points.txt  0017_points.txt  0018_points.txt  0019_points.txt  0020_points.txt
source/: GoalPostsLocator.cpp  GoalPostsLocator.h  config.h  main.cpp  utils.cpp  utils.h
source/algo/: GoalPostsLocator.cpp  GoalPostsLocator.h  GoalPostsLocator_FullMatch.cpp  GoalPostsLocator_FullMatch.h  GoalPostsLocator_If.h  helpers.cpp  helpers.h  pattern_metrics.h
